# wehrlab-datajoint

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml
config/: configure_mysql.sh  dj_docker.yaml  docker-compose.yaml  sql_db.cnf
docs/: conf.py  index.rst
docs/python/: connect.md  elements.md  exceptions.md
docs/python/ingest/: colony.md  index.md  session.md  utils.md
docs/python/interface/: index.md  interface.md
matlab/: connect.m  createSchemas.m  ingest_sessions.asv  ingest_sessions.m  loadNotebook.m  test.m
matlab/+db/: getSchema.m
matlab/+ephys/: getSchema.m
matlab/+genotyping/: getSchema.m
matlab/+information_schema/: getSchema.m
matlab/+lab/: getSchema.m
matlab/+my_subject/: getSchema.m
matlab/+mysql/: getSchema.m
matlab/+performance_schema/: getSchema.m
matlab/+probe/: getSchema.m
matlab/+session/: getSchema.m
matlab/+subject/: getSchema.m
matlab/+sys/: getSchema.m
matlab/+wehr_test/: getSchema.m
python/: pyproject.toml
python/wehrdj/: __init__.py  config.py  connect.py  database_config.py  elements.py  exceptions.py  general_schema.py
python/wehrdj/ingest/: __init__.py  colony.py  lab_info_setup.py  session.py  utils.py
python/wehrdj/interface/: __init__.py  interface.py
wehrdj/: elements.py
