[tool.poetry]
name = "wehrlab-datajoint"
version = "0.1.0"
description = ""
authors = ["jonny"]

[tool.poetry.dependencies]
python = "^3.9"
datajoint = "^0.13.2"
element-lab = "^0.1.0-beta.0"
element-animal = "^0.1.0-beta.0"
element-session = "^0.1.0-beta.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
