[tool.poetry]
name = "wehrlab-datajoint"
version = "0.1.0"
description = ""
packages = [
    { include = "wehrdj" }
]

authors = ["jonny"]

[tool.poetry.dependencies]
python = "^3.9"
datajoint = "^0.13.4"
element-lab = "^0.1.0-beta.0"
element-animal = "^0.1.0-beta.0"
element-session = "^0.1.0-beta.0"
pandas = "^1.4.2"
datajoint-babel = "^0.1.8"
Sphinx = {version = "^4.5.0", optional = true}
furo = {version = "^2022.4.7", optional = true}
myst-parser = {version = "^0.17.2", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
docs = ["Sphinx", "furo", "myst-parser"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
